--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "express": "^4.17.1",
     "knex": "^0.21.1",
     "lodash": "^4.17.15",
+    "multer": "^1.4.2",
     "sqlite3": "^4.2.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
     "@types/lodash": "^4.14.155",
+    "@types/multer": "^1.4.3",
     "ts-node-dev": "^1.0.0-pre.44",
     "typescript": "^3.9.3"
   }
